--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/InsiderJanggo/cloud#readme",
   "dependencies": {
+    "ascii-table": "0.0.9",
     "discord.js": "^12.2.0",
     "simple-youtube-api": "^5.2.1",
     "ytdl-core": "^3.1.2",
